src/objects/Real_Time_Sync_Log__c.object
<CustomObject>
    <description>Object used to record the error logs generated during real time sync process.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Real Time Sync Log</label>
    <listViews>
        <fullName>All_Last_30_days</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>All Last 30 days</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RealTimeSyncbyDate</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Real Time Sync by Date</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Log-{00000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Real Time Sync Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>